fix : fixed overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ body {
     color: #ededed;
     background: #1e1e1e;
     width: 98.8vw;
+    overflow-x: hidden;
 }
 
 .header {
